[package]
authors = ["a.power@1aim.com"]
description = "Easily deserialize postgres rows"
license = "MIT/Apache-2.0"
name = "serde_postgres"
homepage = "https://github.com/1aim/serde_postgres"
repository = "https://github.com/1aim/serde_postgres.git"
version = "0.3.0"
edition = "2018"

[badges]
[badges.travis-ci]
repository = "1aim/serde_postgres"

[dependencies]
serde = "1.0"
tokio-postgres = { version = "0.7", default_features = false }

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
tokio-postgres = "0.7"
postgres = "0.19"
